[package]
name = "iron_inbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tui = { version = "0.19.0", features = ["termion"] }
termion = "2.0.1"
imap = "2.4.1"
native-tls = "0.2.7"

